  * Added "make appleinstall" Makefile target.
  * More FreeBSD fixes.
  * Allow $tincd_bin to be specified as a relative path, searching for
    it in $PATH
  * tinc 1.1pre support: Starting with current git (and 1.1pre7) the binary
    that was called 'tincctl' is now just called 'tinc'. So change the
    default value and introduce new $tincctl_bin config variable.

 -- Sven-Haegar Koch <haegar@sdinet.de>  Sat, 22 Sep 2012 00:43:26 +0200

chaosvpn (2.15-0) unstable; urgency=low

  * Restore previous subnet-up/down behaviour for non-windows compiles.
  * addrmask.c: fix parsing and printing of ip addresses, got broken
    when implementing compiling under windows.
  * tinc.c: ensure all the strings used as char* are zero terminated.
  * make deb: fix to work with git tags starting with a "v" like "v2.14"

 -- Sven-Haegar Koch <haegar@sdinet.de>  Thu, 20 Sep 2012 21:16:21 +0200

chaosvpn (2.14-0) unstable; urgency=low

  * Disable forwarding of broadcast packets - right now we have OSPF
    traffic on the VPN creating useless traffic.
  * Letting tinc use ipv6 as the transport protocol only creates problems
    for now, so reduced transport protocol to ipv4 only.
  * FreeBSD compilation fixes.
  * Windows compilation works for the first time, thanks to Guus!
    (But support not finished yet)
  * Compiled Debian Wheezy and Unstable packages with hardening enabled.

 -- Sven-Haegar Koch <haegar@sdinet.de>  Tue, 28 Aug 2012 12:38:47 +0200

chaosvpn (2.12-0) unstable; urgency=low

  * Support (and use by default) tinc 1.0.17+ option LocalDiscovery=yes

 -- Sven-Haegar Koch <haegar@sdinet.de>  Sat, 10 Mar 2012 16:03:34 +0100

chaosvpn (2.11-0) unstable; urgency=low

  * Do not write Address= lines in tinc hosts files for hidden=1 nodes.
  * New config option $tincd_raw_config
  * Change default of AddressFamily back to 'ipv4'.
    The previous default of 'any' creates reachability problems for nodes
    reachable over ipv4 and ipv6 talking to ipv4-only nodes.